--- a/app/components/components-layout.scss
+++ b/app/components/components-layout.scss
@@ -271,7 +271,7 @@
   }
   
   .components-page .page-header {
-    margin: 0 0 2rem 0;
+    margin: 0;
     padding: 2rem 1rem;
     width: 100%;
     position: static;
@@ -281,7 +281,7 @@
     margin-right: 0;
     
     .header-content {
-      padding: 0 1rem;
+      padding: 0;
     }
     
     .page-title {
